routy-k8s/routy-deploy/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: routy-backend-ser
spec:
  type: ClusterIP
  ports:
  - port: 8001
    targetPort: 7777
  selector:
    app: routybackenddep
