routy-k8s/routy-deploy/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: routy-frontend-ser
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 80  
  selector:
    app: routyfrontenddep
